# CMU-VLA-Challenge-2025

./: .gitignore  README.md  launch_module.sh
ai_module/: align_viz_runs
ai_module/src/color_scan_generation/src/: colorScanGeneration.cpp
ai_module/src/dummy_vlm_py/: CMakeLists.txt  package.xml
ai_module/src/dummy_vlm_py/launch/: explore_graph_all_nodes.launch  graph_mission.launch  llm_prompt_builder.launch  partial_sg_generator.launch
ai_module/src/dummy_vlm_py/scripts/: dummyVLM.py  explore_graph_all_nodes.py  graph_builder_node.py  llm_prompt_builder.py  object_list.py  partial_sg_generator.py  targetdest.py  user_query.py
ai_module/src/gemini_api/: CMakeLists.txt  package.xml
ai_module/src/gemini_api/launch/: align_viz.launch  fusion_pipeline_SG_node.launch  fusion_pipeline_SG_node_merge.launch  fusion_pipeline_SG_node_merge_task3.launch  fusion_pipeline_node.launch  gemini_api.launch
ai_module/src/gemini_api/src/: align_viz_node.py  fusion_pipeline_SG_node.py  fusion_pipeline_SG_node_merge.py  fusion_pipeline_SG_node_merge_task3.py  fusion_pipeline_node.py  object_selector_gemini.py  object_selector_gemini_origin.py  scene_graph_builder.py  temp_image_pub.py
ai_module/src/interaction_manager/: CMakeLists.txt  package.xml
ai_module/src/interaction_manager/launch/: interaction_manager.launch  plan_task_3.launch  planner_go.launch  planner_task3.launch  planner_task3_new.launch  task3_test.launch
ai_module/src/interaction_manager/scripts/: __init__.py  random_exploration.py
ai_module/src/interaction_manager/src/: interaction_manager.py  launch_pipeline.py  path.py  plan_task_3.py
ai_module/src/interaction_manager/src/data/: 1.txt  10.txt  11.txt  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
ai_module/src/leo_vlm/: CMakeLists.txt  package.xml
ai_module/src/leo_vlm/launch/: gpt_llm.launch  gpt_llm_4o.launch  leo_llm.launch
ai_module/src/leo_vlm/src/: gpt_llm.py  gpt_llm_4o.py  gpt_llm_backup.py  leo_llm.py  planner_partialSG.py
ai_module/src/leo_vlm/src/outputs/2025-08-20/12-27-29/.hydra/: config.yaml  hydra.yaml
ai_module/src/planning_node/: CMakeLists.txt  setup.py
ai_module/src/planning_node/launch/: a_star_point_nav.launch  planning_node.launch  planning_node_1_2.launch  planning_node_1_2_MST.launch
ai_module/src/planning_node/scripts/planning_node/: a_star_algorithm.py
ai_module/src/planning_node/src/: a_star_node.py  a_star_node_nav_node.py  explore_node.py  explore_node2.py  grid_node.py  no_explore.py  snapshot_recorder.py  tsp_node.py
docker/: Dockerfile  compose.yml  compose_gpu.yml  compose_gpu_wsl.yml  requirements310.txt
