<?xml version="1.0"?>
<package format="2">
  <name>gemini_api</name>
  <version>0.1.0</version>
  <description>Gemini-based fusion pipeline (ROS Noetic + Python 3.10 via conda)</description>

  <maintainer email="yeonu.seo@example.com">AAILAB</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build/Run dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <export/>
</package>
