<?xml version="1.0"?>
<package format="2">
  <name>leo_vlm</name>
  <version>0.0.1</version>
  <description>The leo_vlm python package</description>
  <maintainer email="gg@gg.edu">jj</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf</exec_depend>
</package>